--- a/index.css
+++ b/index.css
@@ -29,7 +29,10 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
+    padding: 10px;
+    margin: 0 auto;
+    width: 750px;
 }
 ol, ul {
 	list-style: none;
@@ -45,4 +48,48 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+/* navigation */
+
+#first {
+    background-color: coral;
+}
+
+#second {
+    background-color: skyblue;
+}
+
+#third {
+    background-color: yellow;
+}
+
+nav {
+    height: 20vh;
+    margin: 10%;
+}
+
+nav a {
+    border: 1px solid black;
+    padding: 5%;
+    border-radius: 10%;
+}
+
+.main {
+    display: flex;
+}
+
+.main img {
+    width: 15px;
+    height: 55vh;
+    border-radius: 100%;
+}
+
+.guide {
+    align-self: center;
+    text-align: center;
+}
+
+h1 {
+    font: 45px bold;
 }
